--- a/packages/app-b/package.json
+++ b/packages/app-b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@app/base-core": "workspace:^0.0.3",
     "core-js": "^3.8.3",
-    "element-plus": "^1.3.0-beta.1",
+    "element-plus": "^2.3.3",
     "pinia": "^2.0.9",
     "vue": "^3.2.13",
     "vue-i18n": "^9.2.0-beta.25",
@@ -36,7 +36,7 @@
     "lint-staged": "^11.1.2",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "typescript": "~4.1.5",
+    "typescript": "~4.9.5",
     "unplugin-auto-import": "^0.5.4",
     "unplugin-vue-components": "^0.17.11"
   },
