--- a/packages/base-core/package.json
+++ b/packages/base-core/package.json
@@ -6,7 +6,7 @@
     "dist"
   ],
   "module": "dist/index.es.js",
-  "types": "dist/src/index.d.ts",
+  "types": "src/index.ts",
   "scripts": {
     "lint": "eslint src/**/*.{vue,ts} --fix",
     "lint-without-fix": "eslint src/**/*.{ts,vue}",
@@ -21,16 +21,14 @@
     "@typescript-eslint/parser": "^5.9.0",
     "@typescript-eslint/scope-manager": "^5.8.0",
     "@vitejs/plugin-vue": "^2.0.0",
-    "axios": "^0.25.0",
     "dayjs": "^1.10.7",
-    "element-plus": "^2.0.2",
     "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.2.0",
     "rollup-plugin-delete": "^2.0.0",
     "sass": "^1.46.0",
-    "typescript": "^4.4.4",
+    "typescript": "^4.9.5",
     "unplugin-vue-components": "^0.17.13",
     "vite": "^2.7.13",
     "vite-plugin-dts": "^0.9.7",
