--- a/packages/main/package.json
+++ b/packages/main/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@app/base-core": "workspace:^0.0.3",
     "@element-plus/icons-vue": "^1.0.0",
-    "element-plus": "^1.3.0-beta.5",
+    "element-plus": "^2.3.3",
     "modern-normalize": "^1.1.0",
     "pinia": "^2.0.9",
     "qiankun": "^2.6.3",
@@ -37,7 +37,7 @@
     "stylelint-config-standard": "^24.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.1.0",
-    "typescript": "^4.4.4",
+    "typescript": "^4.9.5",
     "unplugin-auto-import": "^0.5.3",
     "unplugin-vue-components": "^0.17.9",
     "vite": "^2.7.10",
